<resources>
    <string name="app_name">EAPclicker</string>


    <string name="finger_default_price">10</string>
    <string name="autoclicker_default_price">50</string>
    <string name="parent_default_price">200</string>

    <string name="finger_default_amount">1</string>
    <string name="other_default_amount">0</string>

    <string name="starting_eap">0</string>

    <string name="Shop">Shop</string>
    <string name="Amount">Amount</string>
    <string name="Price">Price</string>
    <string name="finger">Finger</string>
    <string name="Autoclicker">Autoclicker</string>
    <string name="Wealthy_parents">Wealthy parents</string>

    <string name="MAX">MAX</string>

    <string name="Return">Return</string>

    <string name="About">This game was made by Mae in the start of 2018.</string>


</resources>
